--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "react-scroll-to-component": "^1.0.2",
+    "react-spring": "^8.0.27",
     "styled-components": "^4.3.2",
     "tachyons": "^4.11.1"
   },
